# StageSISEA

./: CMakeLists.txt  README.txt  initialisation.sh  simulation.sh
src/: CMakeLists.txt
src/c++/: CMakeLists.txt  Header_pgm.cpp  Header_pgm.hpp  Image3D.cpp  Image3D.hpp  MaFenetre.cpp  MaFenetre.hpp  bmp.cpp  bmp.hpp  coupler.cpp  coupler.hpp  diffusion3D.cpp  diffusion3D.hpp  main.cpp  model.cpp  model.hpp  prostCell.cpp  prostCell.hpp  prostTissue.cpp  prostTissue.hpp  prostateCell.cpp  prostateCell.hpp  rootSimulator.cpp  rootSimulator.hpp  simMeth.cpp  simMeth.hpp  simulator.cpp  simulator.hpp  treatment.cpp  treatment.hpp
src/data/: octave-workspace
src/data/colourMaps/: Binary.map  Hot.map  Jet.map  Rainramp.map  aal.map  blackbody.map  cycle.map  state.map
src/matlab/: diffusion.m  printInputs.m  printOutImg.m
